# syslog-ng-syslog-ng

./: CMakeLists.txt  NEWS.md  README.md  configure.ac
.github/workflows/: PUBLISH-DOCKER-IMAGE.md  create-packages.yml  dbld-images.yml  devshell-build.yml  devshell.yml  freebsd.yml  nightly-release.yml  packages.yml  publish-docker-image.yml  stable-release.yml  trigger-publish-docker-image.yml  weekly-docker-publish.yml
cmake/: common_helpers.cmake  enable_jemalloc.cmake  find_jemalloc.cmake  print_config_summary.cmake
contrib/: Brewfile  syslog-ng-debun
dbld/: build.manifest
doc/: Makefile.am
docker/: Dockerfile  README.md  entrypoint.sh  syslog-ng.conf  syslog-ng.deb.dockerfile  syslog-ng.rpm.dockerfile
lib/: CMakeLists.txt  Makefile.am  cfg-grammar.y  cfg-parser.c  cfg-source.c  logqueue-fifo.c  logscheduler.c  logscheduler.h  persist-state.c  uuid.c  versioning.h
lib/filter/: filter-blank.c  filter-expr-grammar.ym
lib/logproto/: logproto-http-scraper-responder-server.c
lib/logthrdest/: logthrdestdrv.c
lib/timeutils/: wallclocktime.c
lib/transport/: tls-verifier.c  transport-socket.c
modules/affile/: affile-dest.c  logrotate.c
modules/afsql/: CMakeLists.txt  Makefile.am  afsql.c
modules/afstomp/: afstomp.c  stomp.c
modules/afuser/: afuser.c
modules/correlation/: patterndb.c  pdb-load.c  radix.c
modules/diskq/: diskq-options.c
modules/http/: http-worker.c  http.c
news/: bugfix-5662.md  feature-5654.md  feature-5702.md  other-5662.md
scl/: CMakeLists.txt
syslog-ng/: main.c
syslog-ng-ctl/: control-client-unix.c
(+51 files in other folders)
